# guiderActor

./: .bumpversion.cfg  .gitattributes  .gitignore  CHANGELOG.rst  INSTALL.md  README.md  setup.cfg  setup.py
etc/: gcamFiberInfo.old  gcamFiberInfo.par  gcamFiberInfo_APO.par  guider.cfg  guider_APO.cfg  guider_LCO.cfg  guider_LOCAL.cfg
include/: ipGguide.h
python/guiderActor/: GuiderActor.py  GuiderState.py  PID.py  __init__.py  convertPlPlugMap.py  gcameraThread.py  guiderActor_main.py  loadGprobes.py  masterThread.py  movieThread.py  test_flat.py  tests.py
python/guiderActor/Commands/: GuiderCmd.py  GuiderCmd_APO.py  GuiderCmd_LCO.py  GuiderCmd_LOCAL.py  TCCCmd.py
python/guiderActor/gimg/: GuiderExceptions.py  findsinglestar.py  guiderImage.py  guiderImagePlots.py  umeyama.py
src/gimg/: attic.c  gutils.c  ipGguide.c
test_guiderActor/: guiderTester.py  profile_guider.py  test_GuiderCmd.py  test_gcameraThread.py  test_guiderActor.py  test_guiderImage.py  test_guiderState.py  test_masterThread.py  test_pid.py
