[metadata]
name = sdss-guiderActor
version = 4.0.0
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS-IV Guider
url = https://github.com/sdss/guiderActor
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Topic :: Documentation :: Sphinx
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=2.7,<3
packages = find:
package_dir =
    =python
setup_requires =
	numpy
install_requires =
	numpy
    pyfits
    twisted
    RO
	scipy

[options.extras_require]
dev =
	flake8>=3.7.9
	isort>=4.3.21
	ipdb
	twine
	wheel>=0.36.2
	yapf>=0.31.0

[options.packages.find]
where = python

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	SDSS
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party =
	guiderActor
known_sdss =
	sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
    H101
    N
    W504
per-file-ignores =
    */__init__.py:W,F,E402
max-line-length = 99
